--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -151,7 +151,7 @@
         <ul  class="dropdown-menu menu-bg-clr-3">
          <li routerLinkActive="active" ><a href="javascript:void(0)" class="nav-link" routerLink="/aux" ><i class="fas fa-phone"></i><span>Aux Code</span></a></li>
          <li routerLinkActive="active" *ngIf="voice_3cx"><a href="javascript:void(0)" class="nav-link" routerLink="/aux-code" ><i class="fas fa-list-alt"></i><span>Wrapup Code</span></a></li>
-         <li routerLinkActive="active"  *ngIf="voice_3cx" ><a href="javascript:void(0)" class="nav-link" routerLink="/queue" ><i class="fas fa-layer-group"></i><span>Call Queues</span></a></li>
+         <!-- <li routerLinkActive="active"  *ngIf="voice_3cx" ><a href="javascript:void(0)" class="nav-link" routerLink="/queue" ><i class="fas fa-layer-group"></i><span>Call Queues</span></a></li> -->
          <li routerLinkActive="active" *ngIf="voice_3cx"><a href="javascript:void(0)" class="nav-link" routerLink="/pbc-settings" (click)="pbcSettings()"><i class="fas fa-cog"></i><span>PBX Settings</span></a></li>
          <!-- <li routerLinkActive="active" *ngIf="show_admin_sett && mrvoip && voice_3cx " ><a href="https://omni.mconnectapps.com/mrvoip-connection/"  target="_blank" class="nav-link"  ><i class="fas fa-cog"></i><span>Mr.Voip Connection</span></a></li> -->
 
