--- a/src/app/email-settings/email-settings.component.css
+++ b/src/app/email-settings/email-settings.component.css
@@ -10,3 +10,6 @@
  .mat-chip.mat-standard-chip .mat-chip-remove { color: #fff; opacity: 1; }
 .mat-form-field-underline { border-top: 0; }
 .form-controls { padding: 0 15px; border: 1px solid #e3e3e3; }
+
+.font-medium2.round-rob { color:#25D366  }
+.font-medium3.ring-all { color:red  }
