--- a/src/app/agent-settinga/agent-settinga.component.html
+++ b/src/app/agent-settinga/agent-settinga.component.html
@@ -51,7 +51,7 @@
                                         <div class="agent-status">
                                         <span><i title="Click to call" class="fa fa-phone-square" aria-hidden="true" (click)="clictToCall(queue.sip_login)" style="cursor: pointer; margin-right: 10px;font-size: 15px;"></i></span>
 
-                                            <span  [class]="queue.sip_registered_status == '1' ? 'presence available' : queue.sip_registered_status == '2' ? 'presence away' :  queue.sip_registered_status == '0' ? 'presence out_of_office' :  '' " ></span>
+                                            <!-- <span  [class]="queue.sip_registered_status == '1' ? 'presence available' : queue.sip_registered_status == '2' ? 'presence away' :  queue.sip_registered_status == '0' ? 'presence out_of_office' :  '' " ></span> -->
 
                                         {{queue.sip_login}}</div>
                                     </td>
@@ -74,7 +74,7 @@
                                         <span class="user-icon has-tooltip" style="cursor: pointer;"><i class="far fa-trash-alt" (click)="deleteAgentdata(queue.user_id)"><span class="tooltip-modal" style="min-width: 115px;left: -43px;">Delete</span></i></span>
                                        
                                         <span class="user-icon has-tooltip" style="cursor: pointer;"><i class="fa fa-envelope" (click)="sendWelcomeMail(queue.user_id,queue.email_id)"><span class="tooltip-modal" style="min-width: 115px;left: -43px;">Welcome Email</span></i></span>
-                                        <span  class="user-icon has-tooltip" style="cursor: pointer;"><i class="fas fa-file-invoice-dollar" (click)="genInvoice(queue.user_id,queue.email_id)"><span class="tooltip-modal" style="min-width: 115px;left: -43px;">Generate Invoice</span></i></span>
+                                        <!-- <span  class="user-icon has-tooltip" style="cursor: pointer;"><i class="fas fa-file-invoice-dollar" (click)="genInvoice(queue.user_id,queue.email_id)"><span class="tooltip-modal" style="min-width: 115px;left: -43px;">Generate Invoice</span></i></span> -->
                                         <!-- <button type="button" class="btn btn-primary" (click)="sendWelcomeMail(queue.user_id,queue.email_id)">
                                         <span>
                                             <i class="far fa-inbox-out"></i>
@@ -315,7 +315,7 @@
                                 Please Upgrade your package
                             </div>
                         </div>
-                        <div class="col-md-12" *ngIf="showCallTariffsDet">
+                        <!-- <div class="col-md-12" *ngIf="showCallTariffsDet">
                             <div class="row" >
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -362,7 +362,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         
                         <div class="col-md-6">
                             <div class="form-check form-check-inline">
@@ -957,7 +957,7 @@
                         </div>                            
                     </div>
                     
-                            <div class="col-md-12" *ngIf="this.voice_3cx != 'disabled'">
+                            <!-- <div class="col-md-12" *ngIf="this.voice_3cx != 'disabled'">
 
                                 <div class="form-group">
                                   
@@ -973,10 +973,10 @@
                                        
                                     </div>
                                 </div>
-                            </div> 
+                            </div>  -->
                            
                   
-                    <div class="col-md-12" *ngIf="this.h_sms!='disabled'">
+                    <!-- <div class="col-md-12" *ngIf="this.h_sms!='disabled'">
                         <div class="form-group">
                             <div class="input-group">
                                 <label ><b>SMS Widget</b></label>
@@ -988,11 +988,11 @@
                             </span>
                             </div>
                         </div>
-                    </div> 
+                    </div>  -->
 
                    
 
-                    <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                         <div class="form-group">
                               <div class="input-group">
                                 <label ><b>Internal Chat Widget</b></label>
@@ -1007,7 +1007,7 @@
                                
                             </div>
                         </div>
-                    </div> 
+                    </div>  -->
 
                     
                 </div>
@@ -1040,7 +1040,7 @@
                         Please Upgrade your package
                     </div>
                 </div>
-                    <div class="col-md-12" *ngIf="showCallTariffsDetEdit">
+                    <!-- <div class="col-md-12" *ngIf="showCallTariffsDetEdit">
                         <div class="row" >
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -1087,7 +1087,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
               
 
@@ -1525,7 +1525,7 @@
                         <input type="hidden" formControlName="user_id">
                         <input type="button" data-dismiss="modal" class="btn btn-outline-secondary" value="Cancel">
                         <input type="submit" class="btn btn-primary update_agent" value="Update Agent" [disabled]="!editAgent.valid">
-                        <input type="button" class="btn btn-primary" value="Update Billing Address" (click)="edit_billing_address()">
+                        <!-- <input type="button" class="btn btn-primary" value="Update Billing Address" (click)="edit_billing_address()"> -->
                     </div>
                 </div>
             </form>
