--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,7 +12,7 @@
 
                 <div class="login-logo">
                   <img src="assets/img/logo.png"> 
-                  <span class="logo-name">Omni Bus</span>
+                  <span class="logo-name">Omni Channel</span>
                 </div>
 
 				  <p style="width: 100%;margin-top: .25rem;font-size: 80%;color: #dc3545;"></p>
