--- a/src/app/department/department.component.html
+++ b/src/app/department/department.component.html
@@ -12,7 +12,7 @@
                             Department</button>
                         <!-- <button type="button" class="btn btn-primary"  (click)="RetrieveDept()">+ Retrieve From 3CX</button> -->
                     </div>
-                    <a (click)="showdoc('https://ticketing.mconnectapps.com/api/v1.0/pro_contents/pro_department.pdf')"  target="_blank"><i style="font-size: 24px;
+                    <a (click)="showdoc('https://omni.mconnectapps.com/api/v1.0/pro_contents/pro_department.pdf')"  target="_blank"><i style="font-size: 24px;
                         float: right;" class="fa fa-question-circle"></i></a>
 					<!-- <a href="https://ticketing.mconnectapps.com/api/v1.0/pro_contents/pro_department.pdf" target="_blank"><i style="font-size:24px;padding-left: 20px;" class="fa fa-exclamation-circle"></i></a> -->
 
