--- a/src/app/aux-code/aux-code.component.html
+++ b/src/app/aux-code/aux-code.component.html
@@ -19,7 +19,7 @@
                          
                         <tr>
                             <th>S.no </th>
-                            <th>Wrap Up ID</th>
+                            <!-- <th>Wrap Up ID</th> -->
                             <th>Wrap Up Code</th>
                             <th>Action</th>
                         </tr>
@@ -27,7 +27,7 @@
                         <tbody>
                             <tr *ngFor="let queue of queue_list; let i=index">
                                 <td>{{0+i+1}}</td>
-                                <td>{{queue.id}}</td>
+                                <!-- <td>{{queue.id}}</td> -->
                                 <td>{{queue.auxcode_name}}</td>
                                 
                                     <td>
