--- a/src/app/aux-codes/aux-codes.component.html
+++ b/src/app/aux-codes/aux-codes.component.html
@@ -19,14 +19,14 @@
                      <table class="table table-bordered table-striped table-md">
                         <tr>
                             <th>S.no </th>
-                            <th>Aux ID</th>
+                            <!-- <th>Aux ID</th> -->
                             <th>Aux Code</th>
                             <th>Action</th>
                         </tr>
                         <tbody>
                             <tr *ngFor="let queue of queue_list; let i=index">
                                 <td>{{0+i+1}}</td>
-                                <td>{{queue.id}}</td>
+                                <!-- <td>{{queue.id}}</td> -->
                                 <td>{{queue.auxcode_name}}</td>
                             
                                 <td>
