--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -41,9 +41,9 @@
                     </th> -->
                     <th>S.no</th>
                     <th>Name</th>
-                    <th>Email</th>
-                    <th>Phone Number</th>
-                    <th>Contact Owner</th>
+                    <th>Email Address</th>
+                    <th>Mobile Phone# </th>
+                    <th>Customer Number</th>
                     <th>Actions</th>
                 </tr>
 
