--- a/src/app/email-groups/email-groups.component.html
+++ b/src/app/email-groups/email-groups.component.html
@@ -11,7 +11,7 @@
 
                         <button *ngIf="hide_admin_sett"  type="button" class="btn btn-primary" (click)="addGroup()">+ Add Group</button>
                     </div>
-					<a href="https://baobabgroup.mconnectapps.com/api/v1.0/pro_contents/pro_sms_groups.pdf" target="_blank"><i style="font-size:24px;padding-left: 20px;" class="fa fa-exclamation-circle"></i></a>
+					<a href="https://uatassaabloyccapi.mconnectapps.com/api/v1.0/pro_contents/pro_sms_groups.pdf" target="_blank"><i style="font-size:24px;padding-left: 20px;" class="fa fa-exclamation-circle"></i></a>
 
                 </div>
                 <div class="card-body p-0">
