--- a/src/app/whatsapp-unoff/whatsapp-unoff.component.css
+++ b/src/app/whatsapp-unoff/whatsapp-unoff.component.css
@@ -23,3 +23,7 @@ i.agent_inactive.fa-circle.fas {
     height: calc(100vh - 150px);
     overflow-y: hidden;
 } */
+/* .fas fa-microphone{
+    right: 16px;
+} */
+
