--- a/src/app/custom-wallboard/custom-wallboard.component.html
+++ b/src/app/custom-wallboard/custom-wallboard.component.html
@@ -75,8 +75,8 @@
 
 
 							<div class="custom-wallboard-box light-green-bg-clr">
-								<div class="wallboard-count-item">{{this.agentbusy}}</div>
-								<div class="custom-wallboard-item-name">Agent Busy</div>
+								<div class="wallboard-count-item">{{this.qualityofservice}}</div>
+								<div class="custom-wallboard-item-name">Quality Of Service</div>
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
 							</div>
 
@@ -88,8 +88,8 @@
 							</div>
 
 							<div class="custom-wallboard-box violet-bg-clr">
-								<div class="wallboard-count-item">{{this.talktime}}</div>
-								<div class="custom-wallboard-item-name">Talk Time</div> 
+								<div class="wallboard-count-item">{{this.obtotal}}</div>
+								<div class="custom-wallboard-item-name">Total Outbound Calls</div> 
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/talk-time.svg"></div>
 							</div>
 
@@ -100,7 +100,7 @@
 							</div>
 
 
-							<div class="custom-wallboard-box  blue-bg-clr">
+							<!-- <div class="custom-wallboard-box  blue-bg-clr">
 								<div class="wallboard-count-item">{{this.waitingtime}}</div>
 								<div class="custom-wallboard-item-name">Avg. Waiting Time</div>
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/talk-time.svg"></div>
@@ -122,7 +122,7 @@
 								<div class="wallboard-count-item">{{this.peranswered}}</div>
 								<div class="custom-wallboard-item-name">% of Answered Calls</div>
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/percent.svg"></div>
-							</div>
+							</div> -->
 
 
 							<div class="custom-wallboard-box yellow-bg-clr">
@@ -131,8 +131,30 @@
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
 							</div>
 							<div class="custom-wallboard-box violet-bg-clr">
-								<div class="wallboard-count-item">{{this.avlagent_queue}}</div>
-								<div class="custom-wallboard-item-name">Queue Available Agent</div>
+								<div class="wallboard-count-item">{{this.resagent}}</div>
+								<div class="custom-wallboard-item-name">Registered Agent</div>
+								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
+							</div>
+							<div class="custom-wallboard-box  blue-bg-clr">
+								<div class="wallboard-count-item">0</div>
+								<div class="custom-wallboard-item-name">Unopened WhatsApp Messages</div>
+								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
+							</div>
+
+							<div class="custom-wallboard-box dark-green-bg-clr">
+								<div class="wallboard-count-item">0</div>
+								<div class="custom-wallboard-item-name">Unopened Facebook Messages</div>
+								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
+							</div>
+							<div class="custom-wallboard-box  blue-bg-clr">
+								<div class="wallboard-count-item">0</div>
+								<div class="custom-wallboard-item-name">Total WhatsApp Messages</div>
+								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
+							</div>
+
+							<div class="custom-wallboard-box dark-green-bg-clr">
+								<div class="wallboard-count-item">0</div>
+								<div class="custom-wallboard-item-name">Total Facebook Messages</div>
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
 							</div>
 							<!-- <div class="custom-wallboard-box violet-bg-clr">
@@ -147,7 +169,7 @@
 							</div> -->
 						</div>
 
-						<div class="col-lg-13" *ngIf="this.has_admin">
+						<!-- <div class="col-lg-13" *ngIf="this.has_admin">
 							<div class="card">
 								<div class="card-header">
 									<h4>QUEUE CALLS</h4>
@@ -189,7 +211,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<!-- <div class="col-lg-13" *ngIf="this.user_admin">
 							<div class="card">
 								<div class="card-header">
@@ -235,7 +257,7 @@
 						</div> -->
 
 
-						<div class="call-management-table fl">
+						<!-- <div class="call-management-table fl">
 							<div class="row">
 
 								<div class="col-lg-6">
@@ -275,14 +297,14 @@
 																	<span  [class]="item.state == 'Available' ? 'presence available' : item.state == 'Away' ? 'presence away' :  item.state == 'Out of office' ? 'presence out_of_office' :  item.state == 'Custom 1' ? 'presence wash-room' : item.state == 'AUX' ? 'presence meeting': item.state == 'Busy' ? 'presence busy':'presence out_of_office' " id="{{item.agent_no}}_state_Indi"></span>
 																
 																	{{item.state}}</div>
-															</td>
+															</td> -->
 
 															<!-- <td>
 																
 															<span id="{{item.agent_no}}_reason"> </span>
 															</td> -->
 
-															<td id="{{item.agent_no}}_reason">{{item.reason}}</td>
+															<!-- <td id="{{item.agent_no}}_reason">{{item.reason}}</td>
 															<td id="{{item.agent_no}}_stime">{{item.stime}}</td>
 															<td id="{{item.agent_no}}_answerd">{{item.answerd}}</td>
 															<td id="{{item.agent_no}}_missed">{{item.missed}}</td>
@@ -300,10 +322,10 @@
 											</div>
 										</div>
 									</div>
-								</div>
+								</div> -->
 
 
-								<div class="col-lg-6">
+								<!-- <div class="col-lg-6">
 									<div class="card">
 										<div class="card-header">
 											<h4>QUEUE DETAILS</h4>
@@ -345,11 +367,11 @@
 											</div>
 										</div>
 									</div>
-								</div>
+								</div> -->
 
 
 
-							</div>
+							<!-- </div>
 							
 						</div>
 
@@ -359,7 +381,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
 
 
