--- a/src/app/email-dashboard/email-dashboard.component.html
+++ b/src/app/email-dashboard/email-dashboard.component.html
@@ -23,7 +23,7 @@
                   </div>
               </div>
           </div>
-            <a routerLink="/ticketing-system-new" href="#" class="badge badge-success mr-2">
+            <a routerLink="/ticketing-system-new" href="#" class="text-white badge badge-success mr-2" >
               <span class="icon">
                 <i class="fas fa-ticket-alt"></i>
               </span>
@@ -36,21 +36,21 @@
               &nbsp; Queue Tickets
             </a>
   
-            <a *ngIf="show_admin_set" href="#" routerLink="/ticket-template" class="badge badge-primary mr-2">
+            <a *ngIf="show_admin_set" href="#" routerLink="/ticket-template" class=" text-white badge badge-primary mr-2">
               <span class="icon">
                 <i class="fas fa-palette"></i>
               </span>
               &nbsp; Templates
             </a>
   
-            <a *ngIf="show_admin_set" routerLink="/email-settings" class="badge badge-info mr-2">
+            <a *ngIf="show_admin_set" routerLink="/email-settings" class="text-white badge badge-info mr-2">
               <span class="icon">
                 <i class="fas fa-cog"></i>
               </span>
               &nbsp; Settings
             </a>
   
-            <a *ngIf="show_admin_set" href="#" routerLink="/spam-list" class="badge badge-danger mr-2">
+            <a *ngIf="show_admin_set" href="#" routerLink="/spam-list" class="text-white badge badge-danger mr-2">
               <span class="icon">
                 <i class="fas fa-user-times"></i>
               </span>
